fix modal overlap with loading

--- a/src/style.css
+++ b/src/style.css
@@ -239,7 +239,7 @@
     width: 100vw;
     height: 100vh;
     background-color: rgba(0,0,0,0.4);
-    z-index: 10000;
+    z-index: 100;
 }
 .error-modal-content {
     font-family: 'GardeniaBold';
